--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 
                 </div>
             </div>
+            <div id="questions">
+                <h2>How does javascript work ?</h2>
+                <p>জাভাস্ক্রিপ্ট হচ্ছে ইন্টারপ্রেটেড ল্যাংগুয়েজ। জাভাস্ক্রিটপ্ট  কমপাইল্ড(compiled) ল্যাংগুয়েজ নয়। ব্রাউজারের ভেতর থাকা ইন্টারপ্রেটার জাভাস্ক্রিপ্টের প্রতিটি কোড ইন্টারপ্রেট করে এবং সেগুলো রান করে। মোটামুটি সকল ব্রাউজারেই JIT(Just in time) নামের একটি টেকনোলজি থাকে যেটি জাভাস্ক্রিপ্ট কোডকে bytecode-এ রূপান্তর করে এবং এই বাইটকোড শুধুমাত্র কম্পিউটার বুঝতে পারে। </p>
+                <h2>What does javascript event loop do ?</h2>
+                <p>একই সাথে অনেকগুলো ইভেন্ট বা টাস্ক সম্পন্ন করার প্রক্রিয়াটাই হচ্ছে event loop. যেসব টাস্কগুলো কমপ্লিট করতে হবে প্রোগ্রামের শুরুতেই সেগুলো ট্রাক করা হয় এবং সিরিয়াল অনুযায়ী একের পর এক সেগুলো রান করা হয়। অসংখ্য টাস্ক স্বল্প সময়ে সম্পন্ন করার জন্য event loop খুবই কার্যকরী। </p>
+            </div>
         </main>
         <footer></footer>
 
